Fix overflow issue

--- a/assets/styles/components/_quote-and-image.scss
+++ b/assets/styles/components/_quote-and-image.scss
@@ -16,10 +16,6 @@
     width: 5%;
 }
 
-.quote_image {
-    position: relative; 
-    top: -70px;
-}
 
 .quote_img {
     border-radius:50%;
